--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/Style/style.css">
-    <script defer src="src/JavaScript/script.js"></script>
+    <script defer type="module" src="src/JavaScript/script.js"></script>
     <title>Code Store</title>
 </head>
 <body>
@@ -35,13 +35,21 @@
     <!-- lista de produtos -->
     <div class="container">
         <div class="produtos">
-            <div class="itens">
 
-            </div>
-            <img src="" alt="">
+            <div class="itens">
+            <img src="./src/fotos/perfil.png" alt="">
             <p class="descrição">RTX 3060 4gb</p>
             <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
-            <input type="checkbox" name="" id="Favoritar">
+            <input class="favorito" type="checkbox" name="" id="Favoritar">
+            </div>
+
+            <div class="itens">
+                <img src="./src/fotos/carrinho.png" alt="">
+                <p class="descrição">RTX 3060 4gb</p>
+                <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
+                <input class="favorito" type="checkbox" name="" id="Favoritar">
+            </div>
+            
         </div>
     </div>
 </body>
