estilo: o scss foi atualizado, o container produtos está agora com display flex e as dimenções do botão criado com js foi corrigida para ficar igual o original

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="produtos">
 
             <div class="itens">
-            <img src="./src/fotos/perfil.png" alt="">
+            <img src="./src/fotos/3060.jpg" alt="">
             <p class="descrição">RTX 3060 4gb</p>
             <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
             <input class="favorito" type="checkbox" name="" id="Favoritar">
             </div>
 
             <div class="itens">
-                <img src="./src/fotos/carrinho.png" alt="">
+                <img src="./src/fotos/monitor.jpg" alt="">
                 <p class="descrição">RTX 3060 4gb</p>
                 <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
                 <input class="favorito" type="checkbox" name="" id="Favoritar">
