mecanica de favoritos finalizada

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <div class="container">
         <div class="produtos">
 
-            <div class="itens">
-            <img src="./src/fotos/3060.jpg" alt="">
+            <div id="placa" class="itens">
+            <img name="imgdiv" src="./src/fotos/3060.jpg" alt="">
             <p class="descrição">RTX 3060 4gb</p>
             <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
             <input class="favorito" type="checkbox" name="" id="Favoritar">
             </div>
 
-            <div class="itens">
-                <img src="./src/fotos/monitor.jpg" alt="">
+            <div id="monitor" class="itens">
+                <img name="imgdiv" src="./src/fotos/monitor.jpg" alt="">
                 <p class="descrição">RTX 3060 4gb</p>
                 <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
                 <input class="favorito" type="checkbox" name="" id="Favoritar">
