subtotal: A mecânica de subtotal que soma o valor dos itens e expoe no carrinho foi adicionada e está funcionando perfeitamente com duas casas decimais apos o ponto

--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
     <div class="container">
         <div class="produtos">
 
-            <div id="placa" class="itens">
+            <div id="placa" class="itens" valor="2700.99">
             <img name="imgdiv" src="./src/fotos/3060.jpg" alt="">
             <p class="descrição">RTX 3060 4gb</p>
-            <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
+            <p class="valor">de R$ 4800,99 por R$</p>
+            <p class="valorfinal">2700.90</p>
             <input class="favorito" type="checkbox" name="" id="Favoritar">
             <p class="addcarrinho">adicionar ao carrinho</p>
 
             </div>
 
-            <div id="monitor" class="itens">
+            <div id="monitor" class="itens" valor=2899.90>
                 <img name="imgdiv" src="./src/fotos/monitor.jpg" alt="">
-                <p class="descrição">RTX 3060 4gb</p>
-                <p class="valor">de R$ 4800,99 por R$ 2700.99</p>
+                <p class="descrição">Monitor GAMER 25polegadas 4k curvo</p>
+                <p class="valor">de R$ 3599,90 por R$</p>
+                <p class="valorfinal">2899.90</p>
                 <input class="favorito" type="checkbox" name="" id="Favoritar">
                 <p class="addcarrinho">adicionar ao carrinho</p>
             </div>
@@ -62,10 +64,10 @@
             </div>
 
             <div class="containeritm">
-                <div class="itemcar">
+                <!-- <div class="itemcar">
                     <img class="imgitm" src="./src/fotos/3060.jpg" alt="">
                     
-                    <div class="discricar">
+                    <div class="discricar" valor="2700.99">
                         <p>RTX 3060 4gb</p>
                         <p>de R$ 4800,99 por R$ 2700.99</p>
                     </div>
@@ -77,11 +79,12 @@
                     
                     <div class="valortot"></div>
 
-                </div>
+                </div> -->
             </div>
 
             <div class="total">
-
+                <h2>Valor final:</h2>
+                <div class="checkout"></div>
             </div>
         </div>
 </body>
