Produtos: quatro novos produtos foram adicionados teclado, monitor, processador e mouse

--- a/index.html
+++ b/index.html
@@ -56,6 +56,33 @@
                 <p class="addcarrinho">adicionar ao carrinho</p>
             </div>
             
+            <div id="mouse" class="itens" valor=2899.90>
+                <img name="imgdiv" src="./src/fotos/mouse gamer logitech.jpg" alt="">
+                <p class="descrição">Mouse gamer logitech G502 HERO</p>
+                <p class="valor">de R$ 189,90 por R$</p>
+                <p class="valorfinal">149.90</p>
+                Favoritar <input class="favorito" type="checkbox" name="" id="Favoritar">
+                <p class="addcarrinho">adicionar ao carrinho</p>
+            </div>
+
+            <div id="teclado" class="itens" valor=2899.90>
+                <img name="imgdiv" src="./src/fotos/tecladogamerhusky.jpg" alt="">
+                <p class="descrição">Tecaldo gamer husky RGB</p>
+                <p class="valor">de R$ 459,90 por R$</p>
+                <p class="valorfinal">389.90</p>
+                Favoritar <input class="favorito" type="checkbox" name="" id="Favoritar">
+                <p class="addcarrinho">adicionar ao carrinho</p>
+            </div>
+
+            <div id="processador" class="itens" valor=2899.90>
+                <img name="imgdiv" src="./src/fotos/processador intel core i7 10700k.jpg" alt="">
+                <p class="descrição">Processador Intel core i7 10700k</p>
+                <p class="valor">de R$ 1899,90 por R$</p>
+                <p class="valorfinal">1359.90</p>
+                Favoritar <input class="favorito" type="checkbox" name="" id="Favoritar">
+                <p class="addcarrinho">adicionar ao carrinho</p>
+            </div>
+
         </div>
         
     </div>
