--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                 </div>
             </div>
-            <p class="destaques">Destaques da loja</p>
+            <p class="destaques">Destaques</p>
             <div class="produtos">
 
                 <div id="placa" class="itens" valor="2700.99">
