sistema de perfil atualizado, funcionando 100% online sem nenhum localstorage

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="loghide">
                 <div class="boxlogin">
                     <h2>Faça seu login</h2>
-                    <input class="registreduser" type="text" placeholder="Nome de usuário">
+                    <input class="registreduser" id="registreduser" type="email" placeholder="Email de usuário">
                     <input class="registredpasword" type='password' placeholder="Senha">
                     <input class="login" type='button' value="login">
                 </div>
